# scholarschip_scraper

./: .gitignore  Dockerfile  pyproject.toml
scholarships/: pyproject.toml  requirements.txt  scholarshipCompares.ipynb  scholarship_scraper.py  scholarships.ipynb  scraped_data.csv  scraper.py
scholarships/scholarships/: scholarshipIDs.csv  scholarshipInfo.csv  scholarshipInfo.json  scholarship_scraper.py  scraped_data.csv  scraped_data1.csv  scraped_data2.csv  scraper.py
