[tool.poetry]
name = "scholarships"
version = "0.1.0"
description = ""
authors = ["Damian Herrick <damian.herrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
csvkit = "^1.3.0"
pandas = "^2.2.0"
notebook = "^7.0.7"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
nox = "^2023.4.22"
black = {version = "^24.1.0", allow-prereleases = true}
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
flake8-import-order = "^0.18.2"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.1.17"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
pytest-cov = "^4.1.0"
safety = "^3.0.1"
mypy = "^1.8.0"
pytype = "^2024.1.24"
typeguard = "^4.1.5"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
