[tool.poetry]
name = "scholarships"
version = "0.1.0"
description = ""
authors = ["Damian Herrick <damian.herrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
csvkit = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
